# OpenFactVerification

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  factcheck.py  pyproject.toml  requirements.txt  webapp.py
.github/workflows/: python-lint.yml
assets/css/: app.min.css  factcheck.css  vendor.min.css
assets/js/: app.min.js  vendor.min.js
demo_data/: api_config.yaml  sample_prompt.yaml  text.txt
docs/: CONTRIBUTING.md  DEVELOPMENT_PLAN.md  README.md  RELEASE_LOG.md  development_guide.md  user_guide.md
factcheck/: FactCheck.py  __init__.py  __main__.py
factcheck/config/: CustomLogger.py  api_config.py  api_config.yaml  sample_prompt.yaml  secret_dict.py  secret_dict.template
factcheck/core/: CheckWorthy.py  ClaimVerify.py  Decompose.py  FactCheck.py  QueryGenerator.py  __init__.py
factcheck/core/Retriever/: EvidenceRetrieve.py  GoogleEvidenceRetrieve.py  SerperEvidenceRetrieve.py  __init__.py  base.py  google_retriever.py  serper_retriever.py
factcheck/utils/: GPTClient.py  LLMClient.py  api_config.py  data_class.py  logger.py  multimodal.py  prompt.py  utils.py  web_util.py
factcheck/utils/llmclient/: __init__.py  base.py  claude_client.py  gpt_client.py  local_client.py  local_openai_client.py
factcheck/utils/prompt/: __init__.py  base.py  chatgpt_prompt.py  chatgpt_prompt_zh.py  claude_prompt.py  customized_prompt.py
script/: minimal_test.json  minimal_test.py  minimal_test_en.json  minimal_test_zh.json
templates/: LibrAI_fc.html  input.html  result.html
